# TSP

./: .gitignore  README.md  pyproject.toml
c/: main.c
data/: mini.csv
experiments/: ass4.ipynb  assignment1.py  assignment2.py  assignment3-rest.py  assignment3.py  assignment4.py  assignment5.py  assignment6.py  assignment6_.py  assignment7.py  greedy.py  inter_proof.py  run_random.py
notebooks/: assignment1.ipynb  assignment2.ipynb  assignment7.ipynb  assignment8.ipynb  assignment8_final.ipynb  greedy.ipynb  play.ipynb  vis.ipynb
tests/: test_lazy.py  test_localsearch.py
tsp/: __init__.py  evolutionary.py  largescale.py  solvers.py  utils.py
tsp/localsearch/: __init__.py  descent.py  lazy.py  moves.py
