[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsp"
version = "0.0.1-dev"
description = "Solving TSP"
license = "MIT"
readme = "README.md"
dependencies = ["matplotlib", "numpy", "numba"]

[project.packages]
packages = [
    { include = "lib" },
]

[dependency-groups]
dev = [
    "ipython>=8.29.0",
]
